--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -70,8 +70,12 @@
       audio.play();
       key.classList.add("playing");
     });
-    const keys = document.querySelectorAll(".keys");
-    keys.forEach(key => key.addEventListener("transitionend", removeTransition));
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return; //skip if its not a transform 
+      this.classList.remove('playing');
+    }
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
   </script>
 
 
